SET(SRCS GenericAgent.cpp Events.cpp)
SET(HEADERS GenericAgent.hpp Scheduler.hpp Events.hpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS}
    ${VLE_INCLUDE_DIRS})
LINK_DIRECTORIES(${VLE_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})

ADD_LIBRARY(mas STATIC ${SRCS})

IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
  if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_COMPILER_IS_GNUCXX)
    SET_TARGET_PROPERTIES(mas PROPERTIES COMPILE_FLAGS -fPIC)
  endif ()
ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")

IF (Boost_UNIT_TEST_FRAMEWORK_FOUND AND WITH_TEST)
  TARGET_LINK_LIBRARIES(mas -fprofile-arcs)
ENDIF (Boost_UNIT_TEST_FRAMEWORK_FOUND AND WITH_TEST)

TARGET_LINK_LIBRARIES(mas ${VLE_LIBRARIES})

INSTALL(TARGETS mas ARCHIVE DESTINATION lib)

INSTALL(FILES ${HEADERS} DESTINATION src/vle/extension)

ADD_SUBDIRECTORY(collision)
